[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Weapons/WeaponBase/Cooldown.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Weapons/WeaponBase/Hitbox.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Weapons/WeaponBase/Weapon.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 18.5

[sub_resource type="CircleShape2D" id=2]
radius = 11.0

[node name="Weapon" type="Node2D" groups=["Weapon"]]
position = Vector2( 5, -8 )
script = ExtResource( 3 )

[node name="Node2D" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Node2D"]
offset = Vector2( 26, -26 )

[node name="Hitbox" type="Area2D" parent="Node2D/AnimatedSprite"]
collision_layer = 0
collision_mask = 12
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/AnimatedSprite/Hitbox"]
position = Vector2( 21.5, -24 )
shape = SubResource( 1 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Cooldown" type="Timer" parent="."]
script = ExtResource( 1 )

[node name="WeaponIcon" type="Sprite" parent="."]

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="AttackAudio" type="AudioStreamPlayer" parent="."]
volume_db = 0.9
pitch_scale = 1.3
bus = "SFX"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Cooldown" to="Cooldown" method="_on_Cooldown_timeout"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
